<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F1EF"
    tools:context=".FragmentSetting">


    <RelativeLayout
        android:id="@+id/RelativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#EE6435"
        android:gravity="center_vertical"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textPersonnalPage"
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/name9"
            android:textColor="#000000"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="513dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/userPicture"
            android:layout_width="157dp"
            android:layout_height="133dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="31dp"
            android:layout_marginTop="132dp"
            android:contentDescription="@string/todo6"
            android:scaleType="centerInside"
            app:srcCompat="@mipmap/my" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="115dp"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="72dp"
            android:layout_marginTop="13dp"
            android:gravity="center_vertical"
            android:text="@string/name1"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/userName"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:text="@string/name2"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textPicture"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignLeft="@+id/textName"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/textName"
            android:layout_marginTop="63dp"
            android:gravity="center_vertical"
            android:text="@string/imagenow"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="85dp"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/textPicture"
            android:layout_marginLeft="127dp"
            android:layout_marginStart="127dp"
            android:background="@drawable/c101b68f4b7e4c1dc5af3816f848bf80_d7190ffd9ceb259f21c6e93b0c0cb11827d7"
            android:text="@string/uploadimage" />

        <Button
            android:id="@+id/buttonSignOut"
            android:layout_width="169dp"
            android:layout_height="52dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="70dp"
            android:background="@drawable/c101b68f4b7e4c1dc5af3816f848bf80_d7190ffd9ceb259f21c6e93b0c0cb11827d7"
            android:text="@string/logout" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textAccount"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="22sp" />

        <TextView
            android:id="@+id/textAccount"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignLeft="@+id/textName"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/textName"
            android:layout_marginBottom="145dp"
            android:gravity="center_vertical"
            android:text="@string/ID"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textAccountNum"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignBottom="@+id/textAccount"
            android:layout_alignLeft="@+id/userName"
            android:layout_alignStart="@+id/userName"
            android:gravity="center"
            android:text="@string/_401234567"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="79dp"
            android:layout_height="51dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="76dp"
            android:background="@drawable/c101b68f4b7e4c1dc5af3816f848bf80_d7190ffd9ceb259f21c6e93b0c0cb11827d7"
            android:text="@string/comfirmupload" />


    </RelativeLayout>

</RelativeLayout>